# llm-app

./: .gitignore  Cargo.toml  LICENSE-APACHE  PHASE3_COMPLETION_REPORT.md  README.md  deny.toml  lychee.toml  rust-toolchain.toml
.github/workflows/: quality.yml
crates/adapters/: README.md
crates/adapters/candle-backend/: Cargo.toml  README.md
crates/adapters/candle-backend/src/: failure.rs  lib.rs  loader.rs  model.rs  source.rs
crates/adapters/candle-backend/tests/: llama_cpu.rs
crates/adapters/gguf-backend/: Cargo.toml  README.md
crates/adapters/gguf-backend/src/: failure.rs  lib.rs  loader.rs  metadata.rs  model.rs  source.rs
crates/adapters/gguf-backend/tests/: metadata.rs
crates/adapters/hf-hub/: Cargo.toml  README.md
crates/adapters/hf-hub/src/: lib.rs
crates/adapters/hf-tokenizer/: Cargo.toml  README.md
crates/adapters/hf-tokenizer/src/: lib.rs
crates/adapters/hf-tokenizer/tests/: tokenizer.rs
crates/adapters/host-runtime/: Cargo.toml  README.md
crates/adapters/host-runtime/src/: lib.rs  output.rs  token_output.rs
crates/adapters/host-runtime/tests/: channel.rs  output.rs  token_output.rs
crates/adapters/redb-storage/: Cargo.toml  README.md
crates/adapters/redb-storage/src/: lib.rs
crates/adapters/redb-storage/tests/: storage.rs
crates/apps/: README.md
crates/apps/desktop-slint/: Cargo.toml  README.md  build.rs
crates/apps/desktop-slint/src/: error.rs  lib.rs  main.rs  paths.rs  presenter.rs
crates/apps/desktop-slint/ui/: app-window.slint
crates/engines/: README.md
crates/engines/application-runtime/: Cargo.toml  README.md
crates/engines/application-runtime/src/: configuration.rs  error.rs  event.rs  hub_worker.rs  lib.rs  runtime.rs  shutdown.rs  state.rs  support.rs
crates/engines/application-runtime/src/shutdown/: tests.rs
crates/engines/application-runtime/src/workflow/: artifact.rs  diagnostics.rs  executor.rs  mod.rs
crates/engines/application-runtime/tests/: state.rs  workflow.rs
crates/engines/inference-runtime/: Cargo.toml  README.md
crates/engines/inference-runtime/src/: command.rs  configuration.rs  error.rs  generation.rs  lib.rs  runtime.rs  worker.rs
crates/engines/inference-runtime/tests/: backend_compatibility.rs  fault_injection.rs  generation.rs  runtime.rs
crates/features/: README.md
crates/features/context-planner/: Cargo.toml
crates/features/context-planner/src/: lib.rs
crates/features/context-planner/tests/: planning.rs
crates/features/domain-contracts/: Cargo.toml  README.md
crates/features/domain-contracts/src/: backend.rs  capacity.rs  error.rs  generation.rs  identifiers.rs  lib.rs  lifecycle.rs  model.rs  output.rs  sequence.rs  time.rs
crates/features/domain-contracts/tests/: allocation.rs  contracts.rs
crates/features/sampling/: Cargo.toml
crates/features/sampling/benches/: sampling_pipeline.rs
crates/features/sampling/src/: lib.rs  random.rs  stop.rs
crates/features/sampling/tests/: allocation.rs  sampling.rs
crates/features/task-graph/: Cargo.toml
crates/features/task-graph/src/: lib.rs
crates/features/task-graph/tests/: artifacts.rs  graph.rs
crates/features/tokenization/: Cargo.toml
crates/features/tokenization/src/: error.rs  lib.rs  sink.rs  tokenizer.rs  utf8.rs
crates/features/tokenization/tests/: contracts.rs
docs/: README.md  application-runtime.md  architecture.md  candle-backend.md  desktop-runtime.md  lifecycle.md  persona.md  rules.md  workspace.md
docs/decisions/: 0001-application-runtime-facade.md  0002-candle-cpu-first-vertical-slice.md  0003-generation-scheduling-ownership.md  0004-direct-completion-before-chat.md  0005-retain-crate-folders.md  0006-explicit-bounded-shutdown.md  0007-portability-targets.md
docs/execution/: PHASE3_COMPLETION_REPORT.md  analyzer.md  critical.md  execution-plan.md
docs/knowledge/: rust_knowledge.md
docs/project/: application-runtime.md  dependency-policy.md  desktop-runtime.md  gguf-backend.md  implementation-plan.md  implementation-status.md  inference-runtime.md  lifecycle.md  orchestration.md  performance.md  portability.md  workspace.md
src/: lib.rs  main.rs
tests/: architecture.rs
tests/fixtures/forbidden-edge/: Cargo.toml
tests/fixtures/forbidden-edge/crates/adapters/candle-backend/: Cargo.toml
tests/fixtures/forbidden-edge/crates/adapters/candle-backend/src/: lib.rs
tests/fixtures/forbidden-edge/crates/features/domain-contracts/: Cargo.toml
tests/fixtures/forbidden-edge/crates/features/domain-contracts/src/: lib.rs
tests/fixtures/unknown-location/: Cargo.toml
tests/fixtures/unknown-location/crates/experimental/mystery/: Cargo.toml
tests/fixtures/unknown-location/crates/experimental/mystery/src/: lib.rs
