[package]
name = "llm-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workspace maintenance runner for the modular local-LLM application"
publish = false
default-run = "llm-app"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[workspace]
members = [
    "crates/features/domain-contracts",
    "crates/features/tokenization",
    "crates/features/context-planner",
    "crates/features/sampling",
    "crates/features/task-graph",
    "crates/adapters/candle-backend",
    "crates/adapters/gguf-backend",
    "crates/adapters/host-runtime",
    "crates/adapters/hf-tokenizer",
    "crates/adapters/hf-hub",
    "crates/adapters/redb-storage",
    "crates/engines/inference-runtime",
    "crates/engines/application-runtime",
    "crates/apps/desktop-slint",
]
default-members = [
    ".",
    "crates/features/domain-contracts",
    "crates/features/tokenization",
    "crates/features/context-planner",
    "crates/features/sampling",
    "crates/features/task-graph",
    "crates/adapters/candle-backend",
    "crates/adapters/gguf-backend",
    "crates/adapters/host-runtime",
    "crates/adapters/hf-tokenizer",
    "crates/adapters/hf-hub",
    "crates/adapters/redb-storage",
    "crates/engines/inference-runtime",
    "crates/engines/application-runtime",
    "crates/apps/desktop-slint",
]
resolver = "3"

[workspace.dependencies]
application-runtime = { path = "crates/engines/application-runtime" }
candle-backend = { path = "crates/adapters/candle-backend" }
context-planner = { path = "crates/features/context-planner" }
domain-contracts = { path = "crates/features/domain-contracts" }
gguf-backend = { path = "crates/adapters/gguf-backend" }
hf-hub-adapter = { path = "crates/adapters/hf-hub" }
hf-tokenizer = { path = "crates/adapters/hf-tokenizer" }
host-runtime = { path = "crates/adapters/host-runtime" }
inference-runtime = { path = "crates/engines/inference-runtime" }
redb-storage = { path = "crates/adapters/redb-storage" }
sampling = { path = "crates/features/sampling" }
task-graph = { path = "crates/features/task-graph" }
tokenization = { path = "crates/features/tokenization" }
libm = { version = "0.2", default-features = false }
candle-core = { version = "0.11.0", default-features = false }
candle-nn = { version = "0.11.0", default-features = false }
candle-transformers = { version = "0.11.0", default-features = false }
llama-cpp-2 = { version = "0.1.152", default-features = false }
self_cell = { version = "1.3.0", default-features = false }
serde_json = "1.0"
flume = { version = "0.12.0", default-features = false }
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "1.0", default-features = false, features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
redb = { version = "4.1.0", default-features = false }
slint = { version = "1.17.1", default-features = false, features = ["std", "backend-winit", "renderer-femtovg", "compat-1-2"] }
slint-build = "1.17.1"
stats_alloc = "0.1.10"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"

[lints]
workspace = true
