[package]
name = "gguf-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CPU GGUF inference adapter implemented with llama.cpp"
publish = false

[dependencies]
domain-contracts.workspace = true
llama-cpp-2.workspace = true
self_cell.workspace = true

[lints]
workspace = true
