[package]
name = "hf-hub-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Synchronous Hugging Face Hub model artifact resolver"
publish = false

[dependencies]
hf-hub = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true

[lints]
workspace = true
