[package]
name = "hf-tokenizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hugging Face tokenizer adapter for the portable tokenization contracts"
publish = false

[dependencies]
domain-contracts.workspace = true
tokenization.workspace = true
tokenizers = { workspace = true }

[lints]
workspace = true
