[package]
name = "redb-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Versioned redb persistence adapter for desktop settings and model catalogue"
publish = false

[dependencies]
redb.workspace = true

[lints]
workspace = true
