[package]
name = "application-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Frontend-neutral application orchestration for model acquisition and lifecycle"
publish = false

[dependencies]
candle-backend = { path = "../../adapters/candle-backend" }
domain-contracts = { path = "../../features/domain-contracts" }
hf-hub-adapter = { path = "../../adapters/hf-hub" }
hf-tokenizer = { path = "../../adapters/hf-tokenizer" }
host-runtime = { path = "../../adapters/host-runtime" }
inference-runtime = { path = "../inference-runtime" }
redb-storage = { path = "../../adapters/redb-storage" }
task-graph = { path = "../../features/task-graph" }
tokenization = { path = "../../features/tokenization" }

[lints]
workspace = true
