[package]
name = "application-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Frontend-neutral application orchestration for model acquisition and lifecycle"
publish = false

[dependencies]
candle-backend.workspace = true
domain-contracts.workspace = true
hf-hub-adapter.workspace = true
hf-tokenizer.workspace = true
host-runtime.workspace = true
inference-runtime.workspace = true
redb-storage.workspace = true
task-graph.workspace = true
tokenization.workspace = true

[lints]
workspace = true
