[package]
name = "inference-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Exclusive model registry and bounded inference lifecycle engine"
publish = false

[dependencies]
domain-contracts.workspace = true
host-runtime.workspace = true
sampling.workspace = true

[dev-dependencies]
candle-backend.workspace = true
gguf-backend.workspace = true

[lints]
workspace = true
