[package]
name = "domain-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Portable shared vocabulary and engine-backend contracts"
publish = false

[dependencies]

[dev-dependencies]
stats_alloc.workspace = true

[lints]
workspace = true
