[package]
name = "sampling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic zero-allocation logit sampling and stop matching"
publish = false

[dependencies]
domain-contracts = { path = "../domain-contracts" }
libm.workspace = true

[lints]
workspace = true
