[package]
name = "task-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Allocation-free task graph validation and workflow state transitions"
publish = false

[dependencies]
domain-contracts = { path = "../domain-contracts" }

[lints]
workspace = true
